Optimize ZipArchiveReader name mapping for single entries